# home-gateway

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.postgres  application.yaml  build.rs  config.yaml  docker-compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  presence-config.yaml  renovate.json  switch-config.yaml
.sqlx/: query-00dddeb0e76ac7662d5ebfea7fb798ba35e93f4fb3a8827134807fd733529b4a.json  query-02575c61e7c69090e41439c38d34bf268b4cea9cfb532ca98fe69b7162d197a5.json  query-0479b4477cf93e0f32518ec3a8ae6a4ad112d0efd12535c91eb67a78a99176bf.json  query-09af5c20173ed001dc4c12ce05a6f7bccd3761c002ee9163de94acecd2127405.json  query-0b6d75b2c0aef141d698e52f15a6f48d215a43e6c50194103948b4233ad8afc9.json  query-0f414590a91a16bb3e6c9dfa05e13b1e51bb53778f8ab43297177ad5d652686d.json  query-10919a6630fa614d89a7273ec9d233ab05260a4fa70bd57d4fea6b7e423c82ce.json  query-14cd6443d35a414a3b258190ea7035398e0e3df471a202ee0c267a35f9b9c74c.json  query-15512e8dec43e43e5cb8d832f34605624af6ea692a6a691719f51e64920fa363.json  query-1a16d6e14c4d5e5ad5869d4312dfe2b66a456d5d1f2281187230f8d1476514dd.json  query-1f436580f26c1096362b110ed269c164abbf2758aa79bf7b9c807c8ceec085fa.json  query-2304ca062483bbf4fb97a0875047f6b873a46617b10120306826911b6a91b47c.json  query-262eb4467e403d4a4b122bb36343500d79715170830fa0af0811888711d2a155.json  query-27f560f5cb67e64e60e4c0418dd442feb979aaa840ac6029d1488fa112a7d14c.json  query-2acd7606455b40b7b59c7751ccd41de15039d6dfbcd860f134d3b551919bf097.json  query-2c42a28c9ca547da99ed59dafd89147da8ee2e8a234b7baba28db44726e35654.json  query-2cf7646b811860696b0bcfe7897d59375a326bf46d15524349ea3e75a86b09db.json  query-3111fc8daa9cfc34540d6e95e1074e072ae6d6aabbb0f2e26b3080bdfcbf72f4.json  query-31f0a1f0bf6498ee27667e5a3c735f4a03404a02e01594732b7397b7aa9b46b2.json  query-3824a1d55afd8e43e7b1d9544467cd60918cbbaed8549ba63ef6de0cae5ea87e.json  query-3d16ea79f9055331fb8eb0e45c9fbf38526cb4c94a13e72ffc20759a7e8d20a4.json  query-41562dc42919fa4df2d4f925adb07de7825e2b12553c6c86a4d6fb927750a4e9.json  query-4dddb0194f4e02fcfa612ee7de2ab383c62194b9282d2c5422a7774575c62ccc.json  query-55063d686c0c6ae26f0c1be5ea7c9b272f85aaecd442cdf5bbb544f44d3e4a7d.json  query-599e209c75a284d15fe1b91b2fa3691f5c75cd6dea002457d485b41b3a1014fa.json  query-5a2647ff427fcb9c6e6acf05df70ea4e6a3d575674e516dfea7b79fdc1ee0b41.json  query-5b180fd8a4b157ebfd82fb41887791fa99b3e4b98ee00a6b7e63d3966d9f01fa.json  query-630b6404f23f17da426a2e73b64f460ba8eb46419917daa687f4564fe8a33cb7.json  query-63ba0727d83e86a0d53d2c3b4f6d45727d224b71d7a0fe783037e028ecb1d33e.json  query-654cf7ed171a58b916a69cd18993eaabc8e05ba7ad8da9bfad84e7b4bc282e4d.json  query-6816b1c873c2772dd7e17f46d67be239238dbfe960296f87c5a7763afa4cc237.json  query-688b4c787a337ba274211338279d756959cfe44d0699fa290b271c02c4b85db6.json  query-68e111f03bf3685b9a9b4d48fe30b7bfd68a7ffa2319df49dc826fd03b86ef30.json  query-6a274ad77e71bc4d0f506e3e722b26821497c7d40326d3151ea3891e20fe7880.json  query-6b80ee69e97fb49c336b382f71de4003de66f4e8bf241da8fd79545e15717c2e.json  query-6c129ece7dd756b03e665c168425883513969d486437f1c617702187ab1c12f7.json  query-7198a69592aaded0fe3d975b699fdcde9ff1ddf48c83750e472a3631d9bd8a61.json  query-72a2fb8919352f0d3f4445eed9fbdd5c7c1cb55134267782be691ae0e3908a57.json  query-72d1a562ddec17c7c0f5cb462fae23953b96372da0fdc65c26291e56bf055d3f.json  query-76019b040ef1ee3e78fec6c35d682b2f40686addc59d6ac6cd3372c7d0513c8a.json  (+51 more)
HomeGateway/: .gitignore  build.gradle.kts  local.defaults.properties  settings.gradle.kts
config/: appliances.yaml  base.yaml  config.schema.json  devices.yaml  doors.yaml  environment.yaml  graphql.yaml  kustomization.yaml  maccas.yaml  plants.yaml  presence.yaml  reminders.yaml  switches.yaml
eink-display-case/: base.scad  waveshare.13in3e.scad  waveshare.13in3e.stl
eink-display-firmware/: .gitignore  CMakeLists.txt  Cargo.toml  partitions.csv  sdkconfig.defaults
eink-display-firmware/.cargo/: config.toml
eink-display-firmware/main/: CMakeLists.txt  GDEP133C02.c  GDEP133C02.h  comms.c  comms.h  main.c  pindefine.h
eink-display-firmware/src/: battery.rs  driver.rs  http_client.rs  main.rs  wifi.rs
eink-display-web/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
kubernetes/: client.policy.yaml  gateway.yaml  home-gateway.secret.yaml  httproute.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  selfbot.secret.yaml  unifi-proxy.secret.yaml
migrations/: 20250627130316_init.sql  20250701103049_add_add_appliances_table.sql  20250702024656_update_column_for_smart_switch.sql  20250702025234_remove_not_null_for_current.sql  20250706025425_add_dervied_door_events_table.sql  20250706045248_add_id_column_to_temperature.sql  20250706091504_add_id_column_unifi_clients.sql  20250716130511_add_energy_consumption_table.sql  20250717135136_add_woolworths_product_price_table.sql  20250722100742_add_table_for_unifi_clients_mapping.sql  20250725113522_add_table_for_woolworths_product_tracking.sql  20250728134356_add_more_air_quality_fields.sql  20250728134949_remove_fields_that_dont_work_for_ikea.sql  20250921122254_add_light_state_table.sql  20251216113330_update_woolworths_table_to_contain_name.sql  20260212033912_add_latest_temp_storage.sql  20260608000000_make_temp_fields_nullable.sql  20260608120000_add_android_push_tokens.sql  20260622045006_add_lux_and_uv_fields.sql  20260622120000_add_trigger_cooldowns.sql  20260629000000_add_api_keys.sql  20260629140000_add_device_last_seen.sql  20260630110000_slugify_entity_ids.sql  20260712150000_add_workflows.sql  20260712160000_add_workflow_runs.sql  20260718120000_add_home_assistant_events.sql  20260718160000_slugify_living_room_mtr.sql  20260724000000_add_woolworths_price_history.sql  20260724120000_add_device_battery.sql  20260724130000_api_keys_unique_name.sql  20260724140000_rename_living_room_trmnl_to_fridge.sql
selfbot/: Dockerfile  main.py  pyproject.toml
src/: api_types.rs  auth.rs  battery.rs  bucket.rs  event_bus.rs  http.rs  (+12 more)
unifi-proxy/: Cargo.toml
unifi-proxy/src/: axum_shutdown.rs  main.rs  types.rs
(+382 files in other folders)
