[workspace]
members = ["."]

[package]
name = "home-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
async-graphql = { version = "7.0.17", features = ["uuid", "chrono", "dataloader"] }
async-graphql-axum = "7.0.17"
bytes = "1.10.1"
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.15.13", features = ["yaml"] }
itertools = "0.14.0"
log = "0.4.27"
phf = { version = "0.12", features = ["macros"] }
ractor = "0.15.6"
rumqttc = "0.24.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "tls-rustls", "macros", "chrono", "uuid"] }
thiserror = "2.0.12"
tokio-util = "0.7.15"
tower = { version = "0.5.2", features = ["load-shed"] }
uuid = { version = "1.17.0", features = ["v4"] }
open-feature = "0.2.5"
open-feature-flipt = { git = "https://github.com/open-feature/rust-sdk-contrib.git" }
twilight-cache-inmemory = "0.16.0"
twilight-gateway = "0.16.0"
twilight-http = "0.16.0"
twilight-interactions = "0.16.2"
twilight-model = "0.16.0"
twilight-util = { version = "0.16.0", features = ["builder"] }
pgmq = "0.30.1"
tower-service = "0.3.3"
chrono-tz = "0.10.4"
rust-s3 = "0.35.1"
csv = "1.3.1"
opentelemetry = { version = "0.30.0", features = ["metrics", "trace"] }
opentelemetry-otlp = { version = "0.30.0", features = ["trace", "metrics", "grpc-tonic"] }
opentelemetry-semantic-conventions = { version = "0.30.0", features = ["semconv_experimental"] }
opentelemetry-resource-detectors = { version = "0.9" }
opentelemetry-proto = { version = "0.30.0"}
tonic = { version = "0.13.1", features = ["tls-native-roots"] }
opentelemetry_sdk = "0.30.0"
tracing-opentelemetry = "0.31.0"
opentelemetry-appender-tracing = "0.30.1"
reqwest-middleware = { version = "0.4.2", features = ["json"] }
reqwest-tracing = "0.5.8"
regex = "1.11.1"
lazy_static = "1.5.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.25.0"

[workspace.dependencies]
axum = { version = "0.8.4", features = ["macros"] }
reqwest = { version = "0.12.22", features = ["json", "stream", "cookies"] }
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros", "net", "time", "signal"] }
anyhow = "1.0.98"
http = "1.3.1"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
http-body = "1.0.1"
futures = "0.3.31"
