[workspace]
members = ["."]

[package]
name = "home-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
async-graphql = { version = "7.2.1", features = [
  "uuid", "chrono", "dataloader",
  "opentelemetry",
  # FIXME:https://github.com/async-graphql/async-graphql/issues/1726
  "tracing"
] }
async-graphql-axum = "7.2.1"
bytes = "1.11.1"
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.15.23", features = ["yaml"] }
itertools = "0.15.0"
gcp_auth = "0.12"
log = "0.4.32"
phf = { version = "0.14", features = ["macros"] }
ractor = "0.15.13"
rumqttc = "0.25.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "tls-rustls", "macros", "chrono", "uuid"] }
thiserror = "2.0.18"
tokio-util = "0.7.18"
tower = { version = "0.5.3", features = ["load-shed"] }
uuid = { version = "1.23.2", features = ["v4"] }
open-feature = "0.3"
openfeature-provider = { git = "https://github.com/Accurate0/inf-k8s.git", branch = "main" }
twilight-cache-inmemory = "0.17.1"
twilight-gateway = "0.17.1"
twilight-http = "0.17.1"
twilight-interactions = "0.17.1"
twilight-model = "0.17.1"
twilight-util = { version = "0.17.0", features = ["builder"] }
pgmq = "0.33.7"
tower-service = "0.3.3"
chrono-tz = "0.10.4"
rust-s3 = { version = "0.37.2", default-features = false, features = ["tokio-rustls-tls", "tags"] }
csv = "1.4.0"
opentelemetry = { version = "0.32.0", features = ["metrics", "trace"] }
opentelemetry-otlp = { version = "0.32.0", features = ["trace", "metrics", "grpc-tonic", "reqwest-blocking-client", "logs", "reqwest-rustls", "http-json"] }
opentelemetry-semantic-conventions = { version = "0.32.0", features = ["semconv_experimental"] }
opentelemetry-resource-detectors = { version = "0.11" }
opentelemetry-proto = { version = "0.32.0"}
tonic = { version = "0.14.6", features = ["tls-native-roots"] }
opentelemetry_sdk = "0.32.1"
tracing-opentelemetry = "0.33.0"

opentelemetry-appender-tracing = "0.32.0"
reqwest-middleware = { version = "0.5.2", features = ["json", "query"] }
reqwest-tracing = { version = "0.7.1", features = ["opentelemetry_0_32"] }
regex = "1.12.3"
lazy_static = "1.5.0"
chromiumoxide = "0.9.1"
image = "0.25.10"
futures.workspace = true
serde_yaml = "0.9.34"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
axum-tracing-opentelemetry = "0.38.0"
futures-util = "0.3.32"
tracing-futures = "0.2.5"
async-trait = "0.1.89"
yaml-include = "0.8.1"
opentelemetry-prometheus = "0.32"
prometheus = "0.14.0"
croner = { version = "3.0.1", features = ["serde"] }
sha2 = "0.11"
hex = "0.4"
rand = "0.10"
moka = { version = "0.12", features = ["future"] }
clap = { version = "4.5", features = ["derive", "env"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.26.1"
insta = "1"

[workspace.dependencies]
axum = { version = "0.8.9", features = ["macros", "ws"] }
reqwest = { version = "0.13.4", features = ["json", "stream", "cookies", "query", "rustls", "blocking"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "time", "signal"] }
anyhow = "1.0.102"
http = "1.4.1"
tower-http = { version = "0.7.0", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
http-body = "1.0.1"
futures = "0.3.32"
