[package]
name = "eink-display-firmware"
version = "0.1.0"
authors = ["Anurag <anurag@example.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[workspace]

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = ["std", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", default-features = false }
esp-idf-sys = "0.36"
esp-idf-hal = "0.45"
anyhow = "1"
embedded-hal = "1.0.0"

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }
