[package]
name = "unifi-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
http-body = { workspace = true }
futures = { workspace = true }
